# ai-telegram-bot

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
src/: main.py
src/bot/: app.py  dispatcher.py
src/bot/middlewares/: __init__.py  di.py  error.py  localization.py  logging.py
src/bot/routers/: __init__.py
src/config/: constants.py  settings.py
src/core/: logging.py  redis.py
src/database/: session.py
src/database/migrations/: env.py
src/database/models/: __init__.py  chat.py  message.py  payment.py  settings.py  subscription.py  user.py
src/database/repositories/: __init__.py  base.py  chat.py  message.py  payment.py  settings.py  subscription.py  user.py
src/features/chats/: handlers.py  keyboards.py  service.py
src/features/payments/: service.py
src/features/premium/: service.py
src/features/settings/: handlers.py  keyboards.py  service.py
src/features/subscriptions/: handlers.py  keyboards.py
src/features/users/: handlers.py  keyboards.py  service.py
src/locales/: cs.json  en.json  ru.json  uk.json
src/providers/: __init__.py  base.py  gemini.py  openai.py
src/services/: __init__.py  ai.py  context.py  image.py  localization.py  model.py  prompt.py
src/shared/exceptions/: __init__.py
tests/: conftest.py
tests/unit/services/: test_chat_service.py  test_context_service.py  test_localization_service.py  test_model_service.py  test_prompt_service.py  test_settings_service.py  test_subscription_service.py  test_user_service.py
(+1 files in other folders)
